<resources>
    <string name="app_name">test_3</string>
    <string name="Button1">One,One</string>
    <string name="Button2">One,Tow</string>
    <string name="Button3">One,Three</string>
    <string name="Button4">One,Four</string>
    <string name="Button5">Tow,One</string>
    <string name="Button6">Tow,Tow</string>
    <string name="Button7">Tow,Three</string>
    <string name="Button8">Tow,Four</string>
    <string name="Button9">Three,One</string>
    <string name="Button10">Three,Tow</string>
    <string name="Button11">Three,Three</string>
    <string name="Button12">Three,Four</string>
    <string name="Button13">Four,One</string>
    <string name="Button14">Four,Tow</string>
    <string name="Button15">Four,Three</string>
    <string name="Button16">Four,Four</string>
</resources>
